// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Default should match snapshot 1`] = `
<i
  aria-label="icon: conecto"
  className="to-icon"
>
  <To />
</i>
`;

exports[`Icon Facebook should match snapshot 1`] = `
<i
  aria-label="icon: facebook"
  className="to-icon"
>
  <Facebook />
</i>
`;

exports[`Icon SVG components Facebook SVG component should match snapshot 1`] = `
<svg
  className="to-icon-facebook"
  height="13"
  viewBox="0 0 13 13"
  width="13"
>
  <path
    d="M12.9078 0.737589V12.2624C12.9078 12.6312 12.6312 13 12.1702 13H8.94326V7.92908H10.6028L10.8794 5.99291H8.94326V4.70213C8.94326 4.14894 9.12766 3.78014 9.95745 3.78014H10.9716V2.02837C10.7872 2.02837 10.1418 1.93617 9.49645 1.93617C8.02128 1.93617 7.00709 2.85816 7.00709 4.51773V5.99291H5.25532V7.92908H6.91489V12.9078H0.737589C0.276596 12.9078 0 12.539 0 12.1702V0.737589C0 0.276596 0.276596 0 0.737589 0H12.2624C12.6312 0 12.9078 0.276596 12.9078 0.737589Z"
    fill="#572D2D"
  />
</svg>
`;
